Move scrollbar styling to critical to prevent jumps on load

--- a/src/static/css/main.styl
+++ b/src/static/css/main.styl
@@ -20,31 +20,3 @@ s
   label-for-screenreaders('stricken text')
 ins
   label-for-screenreaders('newly inserted text')
-
-// Scrollbars
-// Style only when using a mouse (prefer default mobile scrollbars)
-+has-only-hover()
-  html
-    scrollbar-width: thin
-
-  // This webkit scrollbar matches Firefox's thin scrollbar fairly closely
-  // Track
-  ::-webkit-scrollbar
-    width: 10px
-  
-  // Handle
-  ::-webkit-scrollbar-thumb
-      box-shadow: inset 0 0 10px 10px rgba(120, 120, 120, 0.35)
-      border: 2px solid transparent
-      border-radius: 5px
-
-  ::-webkit-scrollbar-thumb:hover
-    box-shadow: inset 0 0 10px 10px rgba(120, 120, 120, 0.5)
-
-  ::-webkit-scrollbar-thumb:active
-    box-shadow: inset 0 0 10px 10px rgba(80, 80, 80, 0.5)
-
-  // Horizontal Handle
-  ::-webkit-scrollbar-thumb:horizontal
-      border: 5px solid transparent
-      border-radius: 10px
